@@ -1,3 +1,5 @@
+* Add missing semi-colon to String#toQueryParams and make Selector methods more Caja friendly. [jddalton]
+
 * Large cleanup of code in preparation for the namespace rewrite. [jddalton]
   - Add private method getNodeName() [David Mark, kangax]
   - Rename private method getOwnerDoc() to getDocument()
